Fixed alignment

--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 body {
     font-family: 'Courier New', Courier, monospace;
     font-size: x-large;
-    margin-left: 150px;
-    margin-right: 150px;
+    margin-left: 200px;
+    margin-right: 200px;
     background-color: black;
     color: white;
 }
